# opengl_samples

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  Makefile  main.cpp
src/renderer/: CMakeLists.txt  renderer.cpp  renderer.h
